:bug: Fix Table header extra scrollbar control
close #4637
close #14211

https://github.com/react-component/table/pull/333

--- a/components/table/style/index.less
+++ b/components/table/style/index.less
@@ -600,6 +600,16 @@
     opacity: 0.9999;
   }
 
+  &-hide-scrollbar {
+    // https://github.com/ant-design/ant-design/issues/4637
+    // https://stackoverflow.com/a/54101063
+    // https://github.com/react-component/table/pull/333
+    scrollbar-color: transparent transparent;
+    &::-webkit-scrollbar {
+      background-color: transparent;
+    }
+  }
+
   &-fixed-left,
   &-fixed-right {
     position: absolute;
